@@ -23,7 +23,9 @@
  * THE POSSIBILITY OF SUCH DAMAGE.
  */
 
-#if USE(APPLE_INTERNAL_SDK) && __MAC_OS_X_VERSION_MIN_REQUIRED >= 101000
+#if  __MAC_OS_X_VERSION_MIN_REQUIRED >= 101000
+
+#if USE(APPLE_INTERNAL_SDK)
 
 #import <AppKit/NSSharingService_Private.h>
 
@@ -50,5 +52,7 @@ typedef NS_OPTIONS(NSUInteger, NSSharingServiceMask) {
 @property (readonly) NSSharingServiceType type;
 @property (readwrite, copy) NSString *name;
 @end
+
+#endif
 
 #endif
